--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,22 @@
-# Created by https://www.toptal.com/developers/gitignore/api/react
-# Edit at https://www.toptal.com/developers/gitignore?templates=react
+# Node modules
+/node_modules/
 
-### react ###
-.DS_*
-*.log
-logs
-**/*.backup.*
-**/*.back.*
+# Vite cache
+/.vite/
 
-node_modules
-bower_components
+# Build output
+/dist/
 
-*.sublime*
+# log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-psd
-thumb
-sketch
+# VS Code settings
+.vscode/
 
-# End of https://www.toptal.com/developers/gitignore/api/react
+# macOS specific
+.DS_Store
+
+# Windows specific
+Thumbs.db
