--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,19 @@
 # Build output
 /dist/
 
-# log files
+# Log files
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # VS Code settings
 .vscode/
 
-# macOS specific
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# macOS
 .DS_Store
 
-# Windows specific
+# Windows
 Thumbs.db
