--- a/package.json
+++ b/package.json
@@ -13,33 +13,14 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@typescript-eslint/parser": "^8.38.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "vue-eslint-parser": "^10.2.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.31.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.32.0",
     "eslint-plugin-react": "^7.37.5",
     "gh-pages": "^6.3.0",
-    "globals": "^16.3.0",
     "vite": "^7.0.5"
-  },
-  "eslintConfig": {
-    "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended"
-    ],
-    "plugins": [
-      "react"
-    ],
-    "env": {
-      "browser": true,
-      "es2021": true
-    }
   }
 }
