--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "elite4pokemmo",
+  "name": "pokemmocompendium",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,11 +13,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.6.0",
+    "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.32.0",
     "eslint-plugin-react": "^7.37.5",
     "gh-pages": "^6.3.0",
